# code-hub

./: .gitignore  .gitmodules  .pre-commit-config.yaml  AGENTS.md  CHANGELOG.md  CONTRIBUTING.md  README.md  docker-compose.e2e.yml  docker-compose.prod.yml  docker-compose.yml  metrics-inventory.md  test_restore_idempotency.sh
backend/: .env.example  Dockerfile  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: 0359b8100232_initial_schema.py
backend/app/: main.py
backend/app/api/: __init__.py
backend/app/cli/: __init__.py  user.py
backend/app/core/: __init__.py  config.py  errors.py  events.py  logging.py  middleware.py  redis.py  security.py
backend/app/db/: __init__.py  models.py  seed.py  session.py
backend/app/instance/: __init__.py  local_docker.py
backend/app/proxy/: __init__.py  auth.py  router.py
backend/app/schemas/: pagination.py  workspace.py
backend/app/scripts/: recovery.py
backend/app/services/: __init__.py  recovery.py  session_service.py  workspace_service.py
backend/app/static/: app.js  index.html  login.html
backend/app/storage/: __init__.py  local_dir.py
backend/scripts/: cleanup.py
backend/tests/: conftest.py
backend/tests/e2e/: __init__.py  conftest.py  test_websocket.py
backend/tests/unit/: __init__.py  test_auth_api.py  test_config.py  test_db.py  test_errors.py  test_instance_interface.py  test_local_dir_storage.py  test_local_docker.py  test_logging.py  test_recovery.py  test_security.py  test_session_service.py  test_storage_interface.py  test_workspace_api.py
src/: Dockerfile  Dockerfile.agent  Dockerfile.test  pyproject.toml
src/alembic/: env.py
src/alembic/versions/: 001_m2_workspace_schema.py  002_add_workspace_notify_trigger.py  003_add_phase_changed_at.py  004_drop_ttl_columns.py  005_add_metadata_notify.py  006_unify_sse_channel.py  007_optimize_indexes.py  008_rename_op_id.py  008_rename_op_id_to_archive_op_id.py
src/codehub/: __init__.py
src/codehub/adapters/: __init__.py
src/codehub/agent/: __init__.py  client.py
src/codehub/app/: __init__.py  config.py  logging.py  main.py
src/codehub/control/: __init__.py  tasks.py
src/codehub_agent/: __init__.py  config.py  logging.py  logging_schema.py  main.py
src/tests/: __init__.py  conftest.py
(+331 files in other folders)
