[project]
name = "codehub"
version = "0.1.0"
description = "Cloud Development Environment Platform"
requires-python = ">=3.13"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.32.0",
    "pydantic-settings>=2.0.0",
    # Database
    "sqlmodel>=0.0.22",
    "asyncpg>=0.30.0",
    "greenlet>=3.0.0",
    # Redis
    "redis[hiredis]>=5.0.0",
    # S3/MinIO
    "aioboto3>=13.0.0",
    "types-aiobotocore-s3>=2.15.0",
    # Migration
    "alembic>=1.14.0",
    # Logging
    "python-json-logger>=3.0.0",
    # Auth
    "argon2-cffi>=23.1.0",
    "python-ulid>=3.0.0",
    # Proxy
    "httpx>=0.28.0",
    "websockets>=14.0",
    # Compression
    "zstandard>=0.23.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["codehub"]
